--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/dim_40"
+    android:layout_marginRight="@dimen/dim_40"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dim_35"
-        android:layout_marginRight="@dimen/dim_35"
+        android:layout_marginLeft="@dimen/dim_40"
+        android:layout_marginRight="@dimen/dim_40"
+        android:layout_marginTop="@dimen/dim_10"
+        android:layout_marginBottom="@dimen/dim_10"
         android:gravity="center"
         android:textColor="#9046C3"
-        android:layout_marginTop="@dimen/dim_10"
         android:background="@drawable/store_bg"
         android:padding="@dimen/dim_15" />
 </LinearLayout>
