--- a/app/src/main/res/layout/vegetable_items.xml
+++ b/app/src/main/res/layout/vegetable_items.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/dim_150"
-    android:layout_height="@dimen/dim_250"
+    android:layout_height="@dimen/dim_220"
     android:layout_marginTop="@dimen/dim_15"
     android:elevation="@dimen/dim_11"
     app:cardCornerRadius="@dimen/dim_15">
@@ -12,13 +12,15 @@
         android:layout_height="match_parent"
         android:background="@drawable/rounded_corner_green">
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
             android:id="@+id/tv_cost"
+            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/dim_5"
             android:text="Rs.20"
-            android:textSize="@dimen/dim_16" />
+            android:layout_marginLeft="5dp"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/tv_offer"
@@ -32,15 +34,15 @@
             android:padding="@dimen/dim_5"
             android:text="50% Off"
             android:textColor="#49CA99"
-            android:textSize="@dimen/dim_16" />
+            android:textSize="15sp" />
 
         <ImageView
             android:id="@+id/img_veg"
-            android:layout_width="@dimen/dim_120"
-            android:layout_height="@dimen/dim_120"
+            android:layout_width="95dp"
+            android:layout_height="95dp"
             android:layout_below="@+id/tv_offer"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/dim_10"
+            android:layout_marginTop="8dp"
             android:background="@null"
             android:src="@drawable/apple" />
 
@@ -52,7 +54,7 @@
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:text="Shimla Apple\n 1 KG"
-            android:textSize="@dimen/dim_16" />
+            android:textSize="16sp" />
 
         <View
             android:layout_width="match_parent"
@@ -67,7 +69,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:drawableLeft="@drawable/cart_green"
-            android:drawablePadding="@dimen/dim_10"
+            android:drawablePadding="8dp"
             android:gravity="center"
             android:padding="@dimen/dim_10"
             android:text="Add to cart"
