--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -246,4 +246,12 @@
     <!--app:textStyle="@integer/roboto_medium" />-->
     <!--</LinearLayout>-->
     <!--</LinearLayout>-->
+    <LinearLayout
+        android:id="@+id/bottom_nav_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <include layout="@layout/bottom"></include>
+    </LinearLayout>
 </RelativeLayout>
